--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,42 @@ body {
 section{
     background-color: white;
     display: flex;
-    justify-content: space-between;
     flex-direction: column;
     align-items: center;
     max-height: 522px;
-    max-width: 384px;
-    
+    max-width: 384px;    
     padding: 0;
-    border-radius: 1.25rem;
+    border-radius: 10px;
+    padding: 24px;
+}
+
+.image-div {
+    max-width: 336px;
+    max-height: 200px;
+}
+
+.art-img {
+    border-radius: 10px;
+}
+
+.info-container {
+    max-width: 336px;
+    max-height: 200px;
+    padding: 10px 0 10px 10px; 
+}
+
+.button-container {
+    padding: 0 0 10px 0; 
+}
+
+button {
+    background-color:  hsl(47, 88%, 63%);
+    border: none;
+    border-radius: 5px;
+    font-size: 15px;
+    text-align: center;
+    text-decoration: solid;
+       
 }
 
 footer {
