--- a/styles.css
+++ b/styles.css
@@ -10,15 +10,18 @@ body {
     padding: 0;
 }
 
-section{
+.container{
+    filter: drop-shadow(0 2rem 2rem #111111);
     background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
     max-height: 522px;
-    max-width: 384px;    
+    max-width: 384px;  
+    height: auto;
+    width: auto;  
     padding: 0;
-    border-radius: 10px;
+    border-radius: 20px;
     padding: 24px;
 }
 
@@ -47,8 +50,118 @@ button {
     border-radius: 5px;
     font-size: 15px;
     text-align: center;
-    text-decoration: solid;
-       
+    padding: 3%;
+}
+
+.heading{
+    line-height: 150%;
+    font-size: 14px;
+    font-family: 'Figtree';
+    color: #000;
+}
+
+.card-container {
+    line-height: 150%;
+    font-size: 14px;
+    font-family: 'Figtree';
+}
+
+.author-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.author-picture{
+    padding-top: 20px;
+    width: 32px;
+    height: 32px;
+}
+
+.author-name {
+    line-height: 150%;
+    padding: 20px 0 0 15px;
+    font-size: 12px;
+}
+
+.container:hover {
+    filter: drop-shadow(0 3rem 3rem #111111);
+}
+.container:hover > *  {
+    .heading {
+        color: #F4D04E;
+    }
+}
+
+@media (max-width: 768px) {
+    .container{
+        filter: drop-shadow(0 2rem 2rem #111111);
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-height: 501px;
+        max-width: 327px;  
+        height: auto;
+        width: auto;  
+        padding: 0;
+        border-radius: 20px;
+        padding: 24px;
+    }
+    
+    .art-img {
+        max-width: 337px;
+        max-height: 200px;
+        border-radius: 10px;
+    }
+    
+    .info-container {
+        max-width: 337px;
+        max-height: 200px;
+        padding: 10px 0 10px 10px; 
+    }
+    
+    .button-container {
+        padding: 0 0 10px 0; 
+    }
+    
+    button {
+        background-color:  hsl(47, 88%, 63%);
+        border: none;
+        border-radius: 5px;
+        font-size: 12px;
+        text-align: center;
+        padding: 3%;
+    }
+    
+    .heading{
+        line-height: 150%;
+        font-size: 10px;
+        font-family: 'Figtree';
+        color: #000;
+    }
+    
+    .card-container {
+        line-height: 150%;
+        font-size: 14px;
+        font-family: 'Figtree';
+    }
+    
+    .author-container {
+        display: flex;
+        flex-direction: row;
+    }
+    
+    .author-picture{
+        padding-top: 20px;
+        width: 32px;
+        height: 32px;
+    }
+    
+    .author-name {
+        line-height: 150%;
+        padding: 20px 0 0 15px;
+        font-size: 12px;
+    }
 }
 
 footer {
